# LABA6

./: .gitignore  ArraySequence.h  BitSequence.h  CMakeLists.txt  DynamicArray.hpp  LinkedList.hpp  ListSequence.h  Option.hpp  README.md  Sequence.h  main.cpp  run_gui.ps1  run_tests.ps1  test_results.txt  tests.h
ADT/: Vector.h
Base/: Sequence.h  concepts.hpp  exceptions.hpp
Collections/: ArraySequence.h  BitSequence.h  DynamicArray.hpp  LinkedList.hpp  ListSequence.h
GUI/: mainwindow.cpp  mainwindow.h
Tests/: BitSeqTest.cpp  BitSeqTest.h  DynamicArrayTest.cpp  DynamicArrayTest.h  LinkedListTest.cpp  LinkedListTest.h  ListSeqTest.cpp  ListSeqTest.h  VectorTest.cpp  VectorTest.h  tests.cpp  tests.h
